# agent-box

./: .gitignore  CHANGELOG.md  CLAUDE.md  DW-PROMPT.md  IMPLEMENTATION.md  LICENSE  README.md  README_CN.md  REQUIREMENTS.md  agent-box  agent-box-gui.spec  diag-gui.bat  gui-redesign.py  gui-windows.py  launch-gui.bat  launch-gui.ps1  pyproject.toml  setup.iss
docs/: ARCHITECTURE.md  ROADMAP.md
docs/specs/: agent-box-builtin-template.md  agent-box-data-import.md  agent-box-multi-agent-gui.md  agent-box-provider-rework.md  cc-switch-style-guide.md  claude-code-config-inventory.md  cli-library-extension.md  codex-config-inventory.md  dw-design-prompt.md  frontend-overhaul.md  gui-editing-implementation.md  gui-redesign-p1.md  gui-redesign-p2.md  hermes-config-inventory.md  library-mcp-skills-hooks.md  mvp-implementation.md  opencode-config-inventory.md  sessions-migration.md  v2-bwrap-implementation.md  v2-bwrap-rewrite.md  windows-gui.md
docs/troubleshooting/: desktop-launch.md
gui/: __init__.py  app.py  config.py  data.py  state.py  theme.py  tokens.py  wsl.py
gui-web/: .prettierrc  bridge.py  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
gui-web/docs/: component-standards.md  page-implementation-plan.md
gui-web/src/: App.tsx  index.css  main.tsx
gui/components/: __init__.py  button.py  card.py  divider.py  markdown.py  markdown.py.tmp.2.8793bfe4054c  provider.py  sidebar.py  status.py  toast.py
gui/pages/: __init__.py  (+8 more)
scripts/: diag-gui.bat  export_ccswitch.py  history_test.sh  import_ccswitch_keys.py  smoke_test_gui.py  test_singleton_db.py
tests/: _editor_mock.py  conftest.py  test_claude_mds.py  test_hooks.py  test_launch.py  test_library.py  test_mcp.py  test_preset.py  test_profile.py  test_providers.py  test_sessions.py  test_skills.py  test_wsl_io.py
(+104 files in other folders)
