[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-box"
version = "0.1.0"
description = "Isolated HOME launcher for coding agents (Claude Code MVP)"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
gui = ["nicegui>=2.0"]

[project.scripts]
agent-box = "agent_box.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
